<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/avatarContainer"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:contentDescription="@string/avatar"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_blank_avatar" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_font_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profilePasswordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_font_size" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
